--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -1,5 +1,55 @@
 {% extends "base.html" %}
 
 {% block body %}
-  Hello World!
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-warning alert-dismissable" role="alert">
+        <button class="close" data-dismiss="alert"">
+          <small><sup>X</sup></small>
+        </button>
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
+
+  {% if all_items %}
+  <table class="table table-bordered">
+    {% for items in all_items %}
+      {% if items.completed %}
+        <tr class="table-secondary">
+          <td class="striker">
+            {{ items.item }}
+          </td>
+          <td><center><a class="btn btn-secondary" href="{% url 'cross' list_id=items.id %}">Uncross</a></center></td>
+          <td>
+            <center>
+              <form action="{% url 'delete' list_id=items.id %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-success">Delete</button>
+              </form>
+            </center>
+          </td>
+        </tr>
+      {% else %}
+        <tr>
+          <td>
+            {{ items.item }}
+            <a class="ml-2 btn btn-primary" href="{% url 'edit' list_id=items.id %}">Edit</a>
+          </td>
+          <td><center><a class="btn btn-success" href="{% url 'cross' list_id=items.id %}">Cross</a></center></td>
+          <td>
+            <center>
+              <form action="{% url 'delete' list_id=items.id %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-success">Delete</button>
+              </form>
+            </center>
+          </td>
+        </tr>
+      {% endif %}
+    {% endfor %}
+  </table>
+
+  {% endif %}
+
 {% endblock %}
